--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,3 @@
 {
-  "outputDirectory": "public",
-  "functions": {
-    "*.js": {
-      "maxDuration": 60
-    }
-  }
+  "outputDirectory": "public"
 }
